--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Portfolio BTS SIO SISR</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
-    <link href="/assets/CSS/main.css" rel="stylesheet">
+    <link href="assets/CSS/main.css" rel="stylesheet">
 </head>
 <body>
     <!-- Navbar -->
