--- a/index.html
+++ b/index.html
@@ -614,35 +614,45 @@
                 <div class="col-lg-8">
                     <div class="card mb-4">
                         <div class="card-body">
-                            <h5 class="card-title">Zero Trust Security: L'avenir de la cybersécurité</h5>
-                            <div class="d-flex align-items-center text-muted mb-3">
-                                <i class="bi bi-calendar me-2"></i>
-                                <span>15 Mars 2024</span>
+                            <h5 class="card-title text-center">L'Importance de la Veille Technologique</h5>
+                            <p class="mb-3 text-justify">
+Le domaine de l'informatique est en perpétuelle évolution, il est donc important de suivre les nouvelles avancées technologiques pour éviter que nos outils et nos connaissances ne deviennent obsolètes. La veille technologique est une méthode qui aide à rester informé des innovations dans des domaines tels que l'informatique. Cela nous permet de garder nos connaissances à jour.
+                            </p>
+                            <h6 class="h5 text-center">Thème choisie : La Virtualisation</h6>
+                            <p class="text-justify">
+                                J'ai choisi de me concentrer sur la virtualisation car elle devient une composante cruciale pour les entreprises souhaitant optimiser leurs ressources informatiques. La virtualisation permet de réduire les coûts, d'améliorer la flexibilité des systèmes et de simplifier la gestion des réseaux. 
+                            </p>
+                            <!-- Pearltrees Embedding -->
+                            <div class="text-center mt-5">
+                                <iframe src="https://www.pearltrees.com/chokkapik/la-virtualisation/id82768959?embed=2&d=20241101213" 
+                                        width="560" height="413" style="border:0;" allowtransparency="true"></iframe>
+                                <span style="display:block; padding-top:2px; color:#818181; font-size:13px;">
+                                    <a href="https://www.pearltrees.com/chokkapik/la-virtualisation/id82768959" 
+                                       style="color:#818181; font-size:13px;" target="_blank">La virtualisation</a>, 
+                                    par <a href="https://www.pearltrees.com/chokkapik" 
+                                       style="color:#818181; font-size:13px;" target="_blank">chokkapik</a>
+                                </span>
                             </div>
-                            <div class="mb-3">
-                                <span class="badge bg-primary me-2">Sécurité</span>
-                                <span class="badge bg-primary">Architecture</span>
-                            </div>
-                            <a href="#" class="btn btn-outline-primary">
-                                <i class="bi bi-link-45deg me-2"></i>Lire l'article
-                            </a>
                         </div>
                     </div>
-                    <!-- Add more articles -->
                 </div>
                 <div class="col-lg-4">
                     <div class="card mb-4">
                         <div class="card-body">
-                            <h5 class="card-title mb-4">Sources de Veille</h5>
+                            <h5 class="card-title mb-4">Outils Utilisés pour la Veille</h5>
                             <ul class="list-unstyled">
                                 <li class="mb-3">
-                                    <h6>Security Weekly</h6>
-                                    <p class="text-muted mb-2">Actualités et analyses sur la cybersécurité</p>
-                                    <a href="https://securityweekly.com" class="btn btn-sm btn-outline-primary">
-                                        <i class="bi bi-box-arrow-up-right me-2"></i>Visiter
-                                    </a>
+                                    <h6>Flux RSS</h6>
+                                    <p class="text-muted mb-2">Suivre les publications spécialisées et les sites de référence sur la virtualisation pour rester informé.</p>
                                 </li>
-                                <!-- Add more sources -->
+                                <li class="mb-3">
+                                    <h6>Twitter et LinkedIn</h6>
+                                    <p class="text-muted mb-2">Accéder aux tendances et nouveautés partagées par des experts du domaine.</p>
+                                </li>
+                                <li class="mb-3">
+                                    <h6>Forums et Sites Techniques</h6>
+                                    <p class="text-muted mb-2">Analyser les nouveaux produits et lire les retours d’expérience d’autres professionnels.</p>
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -650,41 +660,43 @@
             </div>
         </div>
     </section>
+    
 
-    <!-- Contact Section -->
-    <section id="contact" class="section-padding bg-light">
-        <div class="container">
-            <h2 class="text-center mb-5">Me Contacter</h2>
-            <div class="row justify-content-center"> <!-- Justification centrée -->
-                <div class="col-lg-6 mb-4 mb-lg-0">
-                    <div class="card h-100">
-                        <div class="card-body">
-                            <h3 class="h4 mb-4">Informations de Contact</h3>
-                            <div class="mb-4">
-                                <p class="mb-3">
-                                    <i class="bi bi-envelope text-primary me-2"></i>
-                                    abdoul04.bayere@gmail.com
-                                </p>
-                                <p>
-                                    <i class="bi bi-geo-alt text-primary me-2"></i>
-                                    Seine et Marne, France
-                                </p>
-                            </div>
-                            <h3 class="h4 mb-4">Réseaux Sociaux</h3>
-                            <div class="d-flex justify-content-center gap-3"> <!-- Justification centrée des boutons -->
-                                <a href="#" class="btn btn-outline-primary">
-                                    <i class="bi bi-github"></i>
-                                </a>
-                                <a href="#" class="btn btn-outline-primary">
-                                    <i class="bi bi-linkedin"></i>
-                                </a>
-                            </div>
+<!-- Contact Section -->
+<section id="contact" class="section-padding bg-light">
+    <div class="container">
+        <h2 class="text-center mb-5">Me Contacter</h2>
+        <div class="row justify-content-center"> <!-- Justification centrée -->
+            <div class="col-lg-6 mb-4 mb-lg-0">
+                <div class="card h-100 text-center"> <!-- Centrer le contenu de la carte -->
+                    <div class="card-body">
+                        <h3 class="h4 mb-4">Informations de Contact</h3>
+                        <div class="mb-4">
+                            <p class="mb-3">
+                                <i class="bi bi-envelope text-primary me-2"></i>
+                                abdoul04.bayere@gmail.com
+                            </p>
+                            <p>
+                                <i class="bi bi-geo-alt text-primary me-2"></i>
+                                Seine et Marne, France
+                            </p>
+                        </div>
+                        <h3 class="h4 mb-4">Réseaux Sociaux</h3>
+                        <div class="d-flex justify-content-center gap-3"> <!-- Justification centrée des boutons -->
+                            <a href="#" class="btn btn-outline-primary">
+                                <i class="bi bi-github"></i>
+                            </a>
+                            <a href="#" class="btn btn-outline-primary">
+                                <i class="bi bi-linkedin"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+</section>
+
     
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
