--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
                         <div class="skill-content">
                             <ul class="skill-list">
                                 <li>VirtualBox</li>
+                                <li>Proxmox</li>
                             </ul>
                         </div>
                     </div>
@@ -288,14 +289,30 @@
                 <div class="col-lg-6">
                     <h3 class="text-center mb-4">Expérience professionnelle</h3>
                     <div class="timeline-container">
-                        <!-- Stage Système et Réseau -->
+                        <!-- Technicein système et réseaux (2ere annee) -->
                         <div class="timeline-item">
                             <div class="timeline-dot">
                                 <i class="bi bi-pc-display"></i>
                             </div>
                             <div class="timeline-content">
                                 <div class="timeline-card">
-                                    <h4>Stagiaire Système et Réseau Informatique</h4>
+                                    <h4>Technicien systèmes et réseaux (Stage 2ème année)</h4>
+                                    <p class="text-primary mb-1">01/2025 - 02/2025</p>
+                                    <p class="text-muted mb-1">Département 77, Savigny-le-Temple 77176</p>
+                                    <p class="text-muted small">Gestion du système informatique, technicein de niveau 1/2, administration réseaux
+                                </div>
+                            </div>
+                        </div>
+
+
+                        <!-- Technicien systèmes et réseaux (Stage 1ère année) -->
+                        <div class="timeline-item">
+                            <div class="timeline-dot">
+                                <i class="bi bi-pc-display"></i>
+                            </div>
+                            <div class="timeline-content">
+                                <div class="timeline-card">
+                                    <h4>Technicien systèmes et réseaux (Stage 1ère année)</h4>
                                     <p class="text-primary mb-1">05/2024 - 06/2024</p>
                                     <p class="text-muted mb-1">Lycée Simone Signoret, Vaux-le-Pénil</p>
                                     <p class="text-muted small">Gestion du système informatique, dépannage et gestion des périphériques</p>
