--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
                         <div class="card h-100">
                             <img src="assets/img/Mission1 - analyse reseau anasang.jpg" class="card-img-top" alt="Project">
                             <div class="card-body">
-                                <h5 class="card-title">Mission 1 - Analyse</h5>
+                                <h5 class="card-title">ANASANG - Analyse</h5>
                                 <p class="card-text">Analyse du système informatique du laboratoire ANASANG</p>
                                 <div class="mb-3">
                                 </div>
@@ -525,7 +525,7 @@
                         <div class="card h-100">
                             <img src="assets/img/Windows_page-0001.jpg" class="card-img-top" alt="Project">
                             <div class="card-body">
-                                <h5 class="card-title">Mission 2 - WIndows Server</h5>
+                                <h5 class="card-title">ANASANG - WIndows Server</h5>
                                 <p class="card-text">Configuration et installation de windows server 2022</p>
                                 <div class="mb-3">
                                 </div>
@@ -543,7 +543,7 @@
                         <div class="card h-100">
                             <img src="assets/img/proxmox.jpg" class="card-img-top" alt="Project">
                             <div class="card-body">
-                                <h5 class="card-title">Mission 3 - Virtualisation</h5>
+                                <h5 class="card-title">ANASANG - Virtualisation</h5>
                                 <p class="card-text">Installation de Proxmox au sein de Anasang</p>
                                 <div class="mb-3">
                                 </div>
@@ -556,6 +556,47 @@
                         </div>
                     </div>
                     <!-- FIN - Project Mission 3 -->
+                     <!-- Intégration de GLPI avec un Serveur de Messagerie - La société Ménuimétal -->
+                    <div class="col-md-6">
+                        <div class="card h-100">
+                            <img src="./assets/img/glpi_msgsrv-1.png" class="card-img-top" alt="Project">
+                            <div class="card-body">
+                                <h5 class="card-title">Société Ménuimétal - Mise en Place de GLPI et d'un serveur de messagerie</h5>
+                                <p class="card-text">Ce projet consiste à intégrer GLPI avec un serveur de messagerie sous Linux pour optimiser la gestion des incidents et l'inventaire du parc informatique.</p>
+                                <div class="mb-3">
+                                    <span class="badge bg-primary me-2">Administration Linux</span>
+                                    <span class="badge bg-primary me-2">Gestion des tickets et des incidents</span>
+                                    <span class="badge bg-primary">Gestion des bases de données</span>
+                                </div>
+                                <div class="d-flex gap-3">
+                                    <a href="./assets/compte-rendu/GLPI_Srv_msg.pdf" target="_blank" class="btn btn-outline-primary">
+                                        <i class="bi bi-box-arrow-up-right me-2"></i>Consulter
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- FIN - Intégration de GLPI avec un Serveur de Messagerie - La société Ménuimétal -->
+                     <!-- Mise en place et gestion d'une infrastructure Windows Server avec PowerShell et haute disponibilité -->
+                    <div class="col-md-6">
+                        <div class="card h-100">
+                            <img src="assets/img/project_docu.png" class="card-img-top" alt="Project">
+                            <div class="card-body">
+                                <h5 class="card-title">Société Ménuimétal - Mise en place et gestion d'une infrastructure Windows Server avec PowerShell et haute disponibilité</h5>
+                                <div class="mb-3">
+                                    <span class="badge bg-primary me-2">Active Directory</span>
+                                    <span class="badge bg-primary me-2">PowerShell</span>
+                                    <span class="badge bg-primary">Haute disponibilité</span>
+                                </div>
+                                <div class="d-flex gap-3">
+                                    <a href="./assets/compte-rendu/AD_Haute_D.pdf" target="_blank" class="btn btn-outline-primary">
+                                        <i class="bi bi-box-arrow-up-right me-2"></i>Consulter
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- FIN - Mise en place et gestion d'une infrastructure Windows Server avec PowerShell et haute disponibilité -->
                      <!-- Project site de documentation -->
                     <div class="col-md-6">
                         <div class="card h-100">
