--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
                                 <li>Debian</li>
                                 <li>Ubuntu</li>
                                 <li>Windows</li>
+                                <li>Kali Linux</li>
                             </ul>
                         </div>
                     </div>
@@ -175,6 +176,8 @@
                             <ul class="skill-list">
                                 <li>Cisco</li>
                                 <li>Wireshark</li>
+                                <li>Parfeu (Pfsense)</li>
+
                             </ul>
                         </div>
                     </div>
@@ -559,7 +562,7 @@
                      <!-- Intégration de GLPI avec un Serveur de Messagerie - La société Ménuimétal -->
                     <div class="col-md-6">
                         <div class="card h-100">
-                            <img src="./assets/img/glpi_msgsrv-1.png" class="card-img-top" alt="Project">
+                            <img src="assets/img/glpi_msgsrv-1.png" class="card-img-top" alt="Project">
                             <div class="card-body">
                                 <h5 class="card-title">Société Ménuimétal - Mise en Place de GLPI et d'un serveur de messagerie</h5>
                                 <p class="card-text">Ce projet consiste à intégrer GLPI avec un serveur de messagerie sous Linux pour optimiser la gestion des incidents et l'inventaire du parc informatique.</p>
@@ -569,7 +572,7 @@
                                     <span class="badge bg-primary">Gestion des bases de données</span>
                                 </div>
                                 <div class="d-flex gap-3">
-                                    <a href="./assets/compte-rendu/GLPI_Srv_msg.pdf" target="_blank" class="btn btn-outline-primary">
+                                    <a href="assets/compte-rendu/GLPI_Srv_msg.pdf" target="_blank" class="btn btn-outline-primary">
                                         <i class="bi bi-box-arrow-up-right me-2"></i>Consulter
                                     </a>
                                 </div>
@@ -577,27 +580,108 @@
                         </div>
                     </div>
                     <!-- FIN - Intégration de GLPI avec un Serveur de Messagerie - La société Ménuimétal -->
-                     <!-- Mise en place et gestion d'une infrastructure Windows Server avec PowerShell et haute disponibilité -->
+                     <!-- OMV -->
                     <div class="col-md-6">
                         <div class="card h-100">
-                            <img src="assets/img/project_docu.png" class="card-img-top" alt="Project">
+                            <img src="assets/img/OMV.png" class="card-img-top" alt="Project">
                             <div class="card-body">
-                                <h5 class="card-title">Société Ménuimétal - Mise en place et gestion d'une infrastructure Windows Server avec PowerShell et haute disponibilité</h5>
+                                <h5 class="card-title">Société Ménuimétal - Mise en place d’une solution de sauvegarde</h5>
+                                <p class="card-text">Mise en place d'un serveur Open Media Volt (OMV).</p>
                                 <div class="mb-3">
-                                    <span class="badge bg-primary me-2">Active Directory</span>
-                                    <span class="badge bg-primary me-2">PowerShell</span>
-                                    <span class="badge bg-primary">Haute disponibilité</span>
+                                    <span class="badge bg-primary me-2">RAID</span>
+                                    <span class="badge bg-primary me-2">OMV</span>
                                 </div>
                                 <div class="d-flex gap-3">
-                                    <a href="./assets/compte-rendu/AD_Haute_D.pdf" target="_blank" class="btn btn-outline-primary">
+                                    <a href="assets/compte-rendu/OMV.pdf" target="_blank" class="btn btn-outline-primary">
                                         <i class="bi bi-box-arrow-up-right me-2"></i>Consulter
                                     </a>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <!-- FIN - Mise en place et gestion d'une infrastructure Windows Server avec PowerShell et haute disponibilité -->
-                     <!-- Project site de documentation -->
+                    <!-- FIN - OMV -->
+                     <!-- Mise en place d'un serveur Nagios et Rancid -->
+                    <div class="col-md-6">
+                        <div class="card h-100">
+                            <img src="assets/img/nagios_rancid.png" class="card-img-top" alt="Project">
+                            <div class="card-body">
+                                <h5 class="card-title">Société Ménuimétal - Déploiement d'une solution de supervision et de sauvegarde des configurations réseau</h5>
+                                <p class="card-text">Mise en place d'un serveur Nagios et Rancid</p>
+                                <div class="mb-3">
+                                    <span class="badge bg-primary me-2">Supervision</span>
+                                    <span class="badge bg-primary">Sauvgarde</span>
+                                </div>
+                                <div class="d-flex gap-3">
+                                    <a href="assets/compte-rendu/Nagios_Rancid.pdf" target="_blank" class="btn btn-outline-primary">
+                                        <i class="bi bi-box-arrow-up-right me-2"></i>Consulter
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- FIN - Mise en place d'un serveur Nagios et Rancid -->
+                    <!-- Mise en place de dispositifs de journalisation -->
+                    <div class="col-md-6">
+                        <div class="card h-100">
+                            <img src="assets/img/logs.png" class="card-img-top" alt="Project">
+                            <div class="card-body">
+                                <h5 class="card-title">Société Ménuimétal - Mise en place de dispositifs de journalisation</h5>
+                                <p class="card-text">Mise en place d'outil pour la gestion des logs tels que graylog et rsyslog</p>
+                                <div class="mb-3">
+                                    <span class="badge bg-primary me-2">Gestion de logs</span>
+                                    <span class="badge bg-primary me-2">Graylog</span>
+                                    <span class="badge bg-primary">Rsyslog</span>
+                                </div>
+                                <div class="d-flex gap-3">
+                                    <a href="assets/compte-rendu/logs.pdf" target="_blank" class="btn btn-outline-primary">
+                                        <i class="bi bi-box-arrow-up-right me-2"></i>Consulter
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- FIN - Mise en place de dispositifs de journalisation -->
+                    <!-- REPLICATION HAPROXY HEARTBEAT -->
+                    <div class="col-md-6">
+                        <div class="card h-100">
+                            <img src="assets/img/LoadBalancing.png" class="card-img-top" alt="Project">
+                            <div class="card-body">
+                                <h5 class="card-title">Société Ménuimétal - REPLICATION HAPROXY HEARTBEAT</h5>
+                                <p class="card-text">Mise en place d'une solution de replication avec haproxy et heartbeat</p>
+                                <div class="mb-3">
+                                    <span class="badge bg-primary me-2">Load balancig</span>
+                                    <span class="badge bg-primary me-2">Docusaurus</span>
+                                </div>
+                                <div class="d-flex gap-3">
+                                    <a href="/assets/compte-rendu/haproxy_hearbeat.pdf" target="_blank" class="btn btn-outline-primary">
+                                        <i class="bi bi-box-arrow-up-right me-2"></i>Consulter
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- FIN - REPLICATION HAPROXY HEARTBEAT -->
+                    <!-- vpn -->
+                    <div class="col-md-6">
+                        <div class="card h-100">
+                            <img src="assets/img/vpn.png" class="card-img-top" alt="Project">
+                            <div class="card-body">
+                                <h5 class="card-title">Société Ménuimétal - Dispositifs de sécurité</h5>
+                                <p class="card-text">Mise en place d'un serveur VPN</p>
+                                <div class="mb-3">
+                                    <span class="badge bg-primary me-2">OpenVPN</span>
+                                    <span class="badge bg-primary">MarkDown</span>
+                                </div>
+                                <div class="d-flex gap-3">
+                                    <a href="assets/compte-rendu/vpn.pdf" target="_blank" class="btn btn-outline-primary">
+                                        <i class="bi bi-box-arrow-up-right me-2"></i>Consulter
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- FIN - vpn -->
+                    <!-- Project site de documentation -->
                     <div class="col-md-6">
                         <div class="card h-100">
                             <img src="assets/img/project_docu.png" class="card-img-top" alt="Project">
@@ -647,10 +731,10 @@
                     </div>
                     <!-- FIN - Rapport de stage 1 -->
 
-                     <!-- Rapport de stage 1 -->
+                     <!-- Rapport de stage 2 -->
                      <div class="col-md-6">
                         <div class="card h-100">
-                            <img src="assets/img/coming-soon.jpg" class="card-img-top" alt="Coming song">
+                            <img src="assets/img/77.png" class="card-img-top" alt="Coming song">
                             <div class="card-body">
                                 <h5 class="card-title">Stage de deuxième année</h5>
                                 <p class="card-text">Rapport de stage de deuxième année</p>
@@ -663,7 +747,7 @@
                             </div>
                         </div>
                     </div>
-                    <!-- FIN - Rapport de stage 1 -->
+                    <!-- FIN - Rapport de stage 2 -->
                     <!-- Add more internship report cards -->
                 </div>
             </div>
